Fixed playlist songs overflowing playlist ul.

--- a/app/app.css
+++ b/app/app.css
@@ -855,6 +855,8 @@ footer .fa {
     padding: 0;
     color: white;
     font-size: 1.5em;
+    max-height: 90%;
+    overflow: auto;
 }
 
 #s2 {
